Proposed fixes/edits on Feb 21

--- a/paper/paper_PE.tex
+++ b/paper/paper_PE.tex
@@ -903,7 +903,7 @@ However, this analysis does not explain why one obtains, with a zero noise reali
   \label{fig:Skydownsmbh22hmSimpleLikeCase9}
 \end{figure}
 
-In this section, we investigate the cause of the apparent bias in sky position in the posterior distribution of System~II when injecting and recovering with 22-mode only waveforms, as shown in Figs.~\ref{fig:PEsmbh22hmCase9} (and in the middle left panel of~\ref{fig:PEsmbhskyptmcmcbambi}). The posterior for the sky forms a peak that appears shifted from the injection. This feature is surprising: since we set the noise realization to zero, the maximum likelihood is by construction reached at the injection. It occurs only when 22-mode only signals are used, and is present for both Bayesian samplers, although $\texttt{ptmcmc}$ and $\texttt{multinest}$ differ noticeably for this case with $\texttt{ptmcmc}$ recovering more parameter volume. We will show that we can understand this feature as a projection effect in the multidimensional degenerate posterior. Understanding the structure of these features could prove useful to inform Bayesian samplers, for instance by building adapted jump proposal allowing a much faster mixing of MCMC chains than naive methods.
+In this section, we investigate the cause of the apparent bias in sky position in the posterior distribution of System~II when injecting and recovering with 22-mode only waveforms, as shown in Figs.~\ref{fig:PEsmbh22hmCase9} (and in the middle left panel of~\ref{fig:PEsmbhskyptmcmcbambi}). The posterior for the sky forms a peak that appears shifted from the injection. This feature is surprising: since we set the noise realization to zero, the maximum likelihood is by construction reached at the injection. It occurs only when 22-mode only signals are used, and is present for both Bayesian samplers, although $\texttt{ptmcmc}$ and $\texttt{multinest}$ differ noticeably for this case with $\texttt{ptmcmc}$ recovering more parameter volume. We will show that we can understand this feature as a projection effect in the multidimensional degenerate posterior. Understanding the structure of these features could prove useful to inform Bayesian samplers, for instance by adapting jump proposals to speed up mixing of MCMC chains.
 
 In the following we will aim at explaining these features analytically by building a simplified model for the response. In this \textit{simplified likelihood} approximation, we: 
 \begin{itemize}
@@ -1069,7 +1069,9 @@ We illustrate our findings in  by running a Bayesian parameter estimation for th
 \subsection{Pre-merger analysis}
 \label{subsec:MBHBacctimePE}
 
-The rate at which parameter information accumulates LISA merger observations is crucial for planning strategies for multi-messenger observations and in guiding the latency demands of the LISA down-link and data processing~\cite{ArmitageNatarajan02, DalCanton+19}. In this Section, we explore how parameter information accumulates on approach to merger by performing parameter estimation studies with temporally truncated signals, as explained in~\ref{subsec:MBHBacctime}: the signals are cut at points where the accumulated SNR is about $\{10,42,166\}$ corresponding to $\{1/64,1/16,1/4\}$ of the total SNR=$666.0$, and times $\{41 \mathrm{hr}, 2.5 \mathrm{hr}, 7 \mathrm{min}\}$ before merger. As shown in Fig.~\ref{fig:modeoverlapsoftime}, most of the SNR accumulates over the last few minutes of signal.
+The rate at which parameter information accumulates during the observation of an inspiral is crucial for establishing the LISA downlink and data processing requirements, as well as for planning multimessenger observations~\cite{ArmitageNatarajan02, DalCanton+19}.
+In this Section, we explore how parameter information accumulates on approach to merger by performing parameter estimation studies with temporally truncated signals, as explained in~\ref{subsec:MBHBacctime}: the signals are cut at points where the accumulated SNR is about $\{10,42,166\}$ corresponding to $\{1/64,1/16,1/4\}$ of the total SNR=$666.0$, and times $\{41 \mathrm{hr}, 2.5 \mathrm{hr}, 7 \mathrm{min}\}$ before merger.
+As shown in Fig.~\ref{fig:modeoverlapsoftime}, most of the SNR accumulates over the last few minutes of this signal.
 
 %\begin{figure*}
 %  \centering
@@ -1100,7 +1102,7 @@ The corresponding sky position posteriors are shown in Fig.~\ref{fig:Mollweidesm
    \begin{minipage}{.32\linewidth}
       \includegraphics[width=.99\linewidth]{../plots/corner_smbh_case9_hm_tseries_tphi.png}
    \end{minipage}
-  \caption{Refinement of parameter inference over time for system II. The posteriors shown correspond to the time cuts defined in~\ref{subsec:MBHBacctime} at $\mathrm{SNR}/64$ (green), $\mathrm{SNR}/16$, $\mathrm{SNR}/4$ and post-merger (blue)., for the masses (left), distance/inclination (center), and time/phase (right). We inject and recover with higher harmonics. The black cross shows the true parameters.}
+  \caption{Refinement of parameter inference over time for system II. The posteriors shown correspond to the time cuts defined in~\ref{subsec:MBHBacctime} at $\mathrm{SNR}/64$ (green), $\mathrm{SNR}/16$, $\mathrm{SNR}/4$ and post-merger (blue) for the masses (left), distance/inclination (center), and time/phase (right). We inject and recover with higher harmonics. The black cross shows the true parameters.}
   \label{fig:smbhCornerZoomHMCase9}
 \end{figure*}
 
@@ -1120,27 +1122,29 @@ The corresponding sky position posteriors are shown in Fig.~\ref{fig:Mollweidesm
   \centering
   \includegraphics[width=.99\linewidth]{../plots/lnL_skymodes_approx_22.pdf}
   \includegraphics[width=.99\linewidth]{../plots/lnL_skymodes_approx_hm.pdf}
-  \caption{Log-likelihood~\eqref{eq:deflnLaet} at degenerate modes in the sky summarized in Table~\ref{tab:MBHBdegen}, for different response approximations (from left to right: \textit{Full}, \textit{Frozen}, \textit{Low-$f$}), with 22-mode only (top) and with higher harmonics (bottom). The log-likelihood is shown as a function of the maximal frequency where we cut the 22-mode signal (with the rescaling~\eqref{eq:fscalinglm} for the other modes), which can be thought of as accumulating signal with time (the vertical lines represent the time cuts of~\ref{subsec:MBHBacctime} and the merger). The lines represent the sky positions listed in Table~\ref{tab:MBHBdegen}: in terms of LISA-frame parameters full or dashed stands for the reflection in latitude, and the color stands the $pi/2$-shifted longitudes. The dashed black curve corresponds to the \textit{reflected} position, and the dashed red to the \textit{antipodal} position. At the injection (solid black), $\ln\calL$ is zero by construction while it is decreasing as a function of $f$ for other sky positions. Reaching a very negative $\ln\calL$ means that this sky position is excluded by the signal accumulated thus far.}
+  \caption{Log-likelihood~\eqref{eq:deflnLaet} at degenerate modes in the sky summarized in Table~\ref{tab:MBHBdegen}, for different response approximations (from left to right: \textit{Full}, \textit{Frozen}, \textit{Low-$f$}), with 22-mode only (top) and with higher harmonics (bottom). The log-likelihood is shown as a function of the maximal frequency where we cut the 22-mode signal (with the rescaling~\eqref{eq:fscalinglm} for the other modes), which can be thought of as accumulating signal with time (the vertical lines represent the time cuts of~\ref{subsec:MBHBacctime} and the merger). The lines represent the sky positions listed in Table~\ref{tab:MBHBdegen}: in terms of LISA-frame parameters full or dashed stands for the reflection in latitude, and the color stands the $pi/2$-shifted longitudes. The dashed black curve corresponds to the \textit{reflected} position, and the dashed red to the \textit{antipodal} position. At the true position (solid black), $\ln\calL$ is zero by construction while it is decreasing as a function of $f$ for other sky positions. Reaching a very negative $\ln\calL$ means that this sky position is excluded by the data accumulated thus far.}
   \label{fig:lnLskymodesapprox}
 \end{figure*}
 
-We have found that pre-merger analysis of the previous section made apparent the 8-modes degeneracy pattern that can be predicted analytically from the structure of the \textit{Frozen, low-$f$} response approximation (see~\eqref{eq:degenreflection}, \eqref{eq:degenlambdapi2}). Analyses of IMR signals as in~\ref{subsec:SMBHPEfull} show that only the \textit{reflected} mode~\eqref{eq:degenreflection} survives post-merger. In this Section we explain how and why this transition occurs.
+The pre-merger analysis of the previous section made apparent the 8-modes degeneracy pattern that can be predicted analytically from the structure of the \textit{Frozen, low-$f$} response approximation (see~\eqref{eq:degenreflection}, \eqref{eq:degenlambdapi2}).
+However, the analysis of IMR signals in~\ref{subsec:SMBHPEfull} shows that only the \textit{reflected} mode~\eqref{eq:degenreflection} survives post-merger. In this Section we explain how and why this transition occurs.
 
-We have already presented a discussion of different qualitative effects in the instrument response in Sec.~\ref{subsec:MBHBresponseapprox} and Fig.~\ref{fig:responseapproxtdia22}: one hand hand, the motion of LISA leaves an imprint (the time-dependency) on the low frequencies, where the time-frequency map is steep enough that a short interval in frequency maps to a large interval of time; on the other hand, the breakdown of the long-wavelength approximation leaves an imprint (the frequency-dependency) at high frequencies. Here we look at the quantitative importance of these features on the inference as a function of frequency (or as a function of time). We can readily select one or the other feature by using the \textit{Frozen} response, ignoring time dependency, or the \textit{Low-$f$} response, ignoring frequency dependency.
+We have already presented a discussion of different qualitative effects in the instrument response in Sec.~\ref{subsec:MBHBresponseapprox} and Fig.~\ref{fig:responseapproxtdia22}: on one hand, the motion of LISA leaves an imprint (the time-dependency) on the low frequencies, where the time-frequency map is steep enough that a short interval in frequency maps to a large interval of time; on the other hand, the breakdown of the long-wavelength approximation leaves an imprint (the frequency-dependency) at high frequencies. Here we look at the quantitative importance of these features on the inference as a function of frequency (or as a function of time). We can readily select one or the other feature by using the \textit{Frozen} response, ignoring time dependency, or the \textit{Low-$f$} response, ignoring frequency dependency.
 
 In Fig.~\ref{fig:lnLskymodesapprox} we show log-likelihood values obtained with either the \textit{Full}, \textit{Frozen} or \textit{Low-$f$} response, with and without higher harmonics, for each of the eight modes in the sky described by~\eqref{eq:degenreflection}-\eqref{eq:degenlambdapi2}. The likelihood~\eqref{eq:deflnLaet} is computed with the same response approximation for the injection and for the template. The results are shown as a function of frequency in a cumulative sense: we compute the likelihood by accumulating signal up to the frequency shown in the $x$-axis. When including higher harmonics, this cut in frequency is interpreted as a cut in time and propagated to other harmonics according to~\eqref{eq:fscalinglm}.
 
-A value of $\ln \calL = 0$ means that the template signal with shifted parameters is identical to the injection, while a very negative $\ln \calL$ means that these parameter values are excluded in the inference. The injection (full black line) has always $\ln \calL = 0$ by construction. The \textit{reflected} sky mode~\eqref{eq:degenreflection} is the dashed black line, and the \textit{antipodal} sky mode~\eqref{eq:degenantipodal} is the dashed red line. 
+A value of $\ln \calL = 0$ means that the template signal with shifted parameters is identical to the injection, while a very negative $\ln \calL$ means that these parameter values are ruled out.
+The injection (full black line) has always $\ln \calL = 0$ by construction. The \textit{reflected} sky mode~\eqref{eq:degenreflection} is the dashed black line, and the \textit{antipodal} sky mode~\eqref{eq:degenantipodal} is the dashed red line. 
 
 With the \textit{Low-$f$} response, the \textit{antipodal} mode remains almost exactly degenerate with the injection, differing only by the Doppler phase~\eqref{eq:defPhiR}, which has a small effect on our short signals as shown in Fig.~\ref{fig:tranferSMBHCase9}. As explained below~\eqref{eq:degenantipodal}, other modes fail to reproduce the injected signal because of the time-dependence of the pattern functions. They acquire a moderate penalty at low frequency, but $\ln \calL$ then goes to a constant since the motion becomes negligible at high frequencies, as shown by the transfer functions in Fig.~\ref{fig:responseapproxtdia22}.
 
-With the \textit{Low-$f$} response, the \textit{reflected} mode remains exactly degenerate as anticipated in Sec.~\ref{subsec:MBHBPEdegen}. All other modes see their $\ln \calL$ fall rapidly at around $2\mHz$ due to the onset of frequency-dependency in the response. Comparing to Fig.~\ref{fig:responseapproxtdia22}, we see that around $2\mHz$ the breaking of the long-wavelength approximation is still mild; however, the SNR start to accumulate a lot from $\SNR/16 \sim 40$ at $2.5\, \mathrm{h}$ to $\SNR/4 \sim 160$ at $7\min$, magnifying the effect of these features. Comparing the two rows of the figure, we see that the higher harmonics have an effect here, in making the elimination of secondary modes happen earlier in frequency (or time). This is expected as they start to contribute significantly to the SNR (see Fig.\ref{fig:modeoverlapsoftime}) and reach higher in frequency than the $h_{22}$ harmonic according to~\eqref{eq:fscalinglm}.
+With the \textit{Frozen} response, the \textit{reflected} mode remains exactly degenerate as anticipated in Sec.~\ref{subsec:MBHBPEdegen}. All other modes see their $\ln \calL$ fall rapidly at around $2\mHz$ due to the onset of frequency-dependency in the response. Comparing to Fig.~\ref{fig:responseapproxtdia22}, we see that around $2\mHz$ the breaking of the long-wavelength approximation is still mild; however, the SNR start to accumulate a lot from $\SNR/16 \sim 40$ at $2.5\, \mathrm{h}$ to $\SNR/4 \sim 160$ at $7\min$, magnifying the effect of these features. Comparing the two rows of the figure, we see that the higher harmonics have an effect here, in making the elimination of secondary modes happen earlier in frequency (or time). This is expected as they start to contribute significantly to the SNR (see Fig.\ref{fig:modeoverlapsoftime}) and reach higher in frequency than the $h_{22}$ harmonic according to~\eqref{eq:fscalinglm}.
 
 The \textit{Full} response case is essentially a superposition of the previous two response approximations, with a successive onset of the time-dependency and frequency-dependency to break degeneracies. We note that overall, including the higher harmonics does not change this qualitative picture, despite an earlier onset of frequency-dependent degeneracy-breaking features.
 
 Limitations of such explorations should be made clear: by using a pointwise estimate, we cannot make statistical statements and are missing volume effects discussed in Sec.~\ref{subsec:MBHBPEdegen22}; by transforming the angular parameters with an analytical prescription while keeping the other fixed, we are in a sense overconstraining the degeneracy. In particular, it is conceivable that one could find a better match to the injected signal in the vicinity of a degenerate sky mode, by adjusting slightly all parameters.
 
-This is indeed what happens in multidmensional Bayesian parameter estimation, and is illustrated in Fig.~\ref{fig:lnLskymodesapprox}: in the first panel, for the three pre-merger analyses as well as for the post-merger analysis, we overlay circles indicating the best $\ln \calL$ found among the posterior samples, in each eighth of the sky corresponding to the eight sky modes (when no samples are present in this region of the sky, nothing is displayed). A sampler is not an optimizer, so the precise value achieved is not optimal and would vary when repeating runs; nevertheless, this measure gives a good proxy for how much closer of the injected signal we could get by slightly biasing the parameters.
+This is indeed what happens in multidimensional Bayesian parameter estimation, and is illustrated in Fig.~\ref{fig:lnLskymodesapprox}: in the first panel, for the three pre-merger analyses as well as for the post-merger analysis, we overlay circles indicating the best $\ln \calL$ found among the posterior samples, in each eighth of the sky corresponding to the eight sky modes (when no samples are present in this region of the sky, nothing is displayed). A sampler is not an optimizer, so the precise value achieved is not optimal and would vary when repeating runs; nevertheless, this measure gives a good proxy for how much closer to the injected signal we could get by slightly biasing the parameters.
 
 We see that the best $\ln \calL$ among samples can be higher than the point estimate would tell us, especially for the analysis at $\sim 7 \min$ before merger, and higher harmonics make a visible difference. This has consequences for approximations like the Fisher analysis, if secondary peaks are shifted from the analytical predictions. We leave for future work the investigation of approximate representations of sky degeneracies.
 
@@ -1166,9 +1170,14 @@ Stellar-mass black-hole binaries (SBHB) inspirals have been recently recognized 
 important source of LISA detections \cite{Sesana16, Vitale16}. Full Bayesian parameter
 estimation studies for these LISA signals have not yet been developed, but the Fisher approach has been used in~\cite{Sesana16, Vitale16, Nishizawa+16a, Nishizawa+16b}. In this section we present two case
 studies of parameter inference for such sources using the formalism and methods
-described earlier, while limiting the analysis to the extrinsic parameters (excluding the masses, and fixing the time to coalescence). The parameters of the simulated mergers were drawn from the Radler LISA Data Challenge (LDC), which itself followed the population of~\cite{Sesana16}, and are listed in Table~\ref{tab:SBHBparams}. The system I is a moderately massive system, placed at a favorable close distance; with an SNR of $26.6$ it would be at the tail of the most favorable detections that we can hope for~\cite{Sesana16, Gerosa+19, Moore+19}. The system II is a higher-mass, moderate-SNR system. Both systems happen to be close to the ecliptic plane.
+described earlier, while limiting the analysis to the extrinsic parameters (excluding the masses, and fixing the time to coalescence). The parameters of the simulated mergers were drawn from the Radler LISA Data Challenge (LDC), which itself followed the population of~\cite{Sesana16}, and are listed in Table~\ref{tab:SBHBparams}.
+System I is moderately massive, placed at a favorable close distance; with an SNR of $26.6$ it would be at the tail of the most favorable detections that we can hope for~\cite{Sesana16, Gerosa+19, Moore+19}.
+System II is a higher-mass, moderate-SNR system.
+Both systems happen to be close to the ecliptic plane.
 
-Fig.~\ref{fig:transferSBHBcaseI} illustrates, for the system I in this table, the instrumental transfer functions~\eqref{eq:defTlmaet} as well as the Doppler phase~\eqref{eq:defPhiR}. Contrasting with the SMBHB case, we see that the transfer functions have much more structure in this case. Both the time-dependency and the frequency-dependency in the response lead to oscillatory features in the response. The Doppler phase~\eqref{eq:defPhiR}, that was negligible for our short SMBHB systems, represents now tens of radians.
+Fig.~\ref{fig:transferSBHBcaseI} illustrates the instrumental transfer functions~\eqref{eq:defTlmaet} as well as the Doppler phase~\eqref{eq:defPhiR} for system I.
+Contrasting with the SMBHB case, we see that the transfer functions have much more structure in this case. Both the time-dependency and the frequency-dependency in the response lead to oscillatory features in the response.
+The Doppler phase~\eqref{eq:defPhiR}, negligible for our short SMBHB systems, now varies by tens of radians.
 
 %The TDI channel $T$, negligible as well for low-frequency SMBHB signals, makes here a small contribution at high frequencies.
 
@@ -1218,8 +1227,8 @@ in several ways: we assume that we know the signal to be present, bypassing the 
 
 The waveform model used to work with SBHB systems is a standard post-Newtonian
 frequency-domain waveform (we use a version of the \texttt{TaylorF2} approximant as implemented in \texttt{LAL}~\cite{lal}). In practice, because LISA only observes the early
-inspiral of SBHB systems, the signal is well within the domain of applicability of the post-Newtonian approximation~\cite{Mangiagli+18}. In the deep inspiral, harmonics beyond the dominant quadrupole give a negligible
-contribution to the signal, so we only include the $(2,2)$ mode for simplicity.
+inspiral of SBHB systems, the signal is well within the domain of applicability of the post-Newtonian approximation~\cite{Mangiagli+18}.
+In the early inspiral, harmonics beyond the dominant quadrupole give a negligible contribution, so we only include the $(2,2)$ mode.
 
 As done in the previous section, we apply our parameter inference procedure to
 these systems using both the \texttt{multinest} and \texttt{ptmcmc} samplers, and we
@@ -1229,10 +1238,14 @@ order of days on a single CPU core without careful optimization. The \texttt{mul
 sampler, on the other hand, completes in a few hours only.
 
 The resulting posterior distributions are shown in Fig.~\ref{fig:sbhb_corner_1}
-and \ref{fig:sbhb_corner_12}. We find close agreement between the \texttt{multinest} and
-\texttt{ptmcmc} samplers. The joint distributions for extrinsic parameters are fairly simple, with extended degeneracies occuring only in the angular parameters $(\varphi, \psi)$. Thanks to the complexity of the instrument transfer functions shown in Fig.~\ref{fig:transferSBHBcaseI} carrying a lot of information, the sky position determination is very good. The typical degeneracy between inclination and distance
-is evident, as there is no degeneracy breaking from higher harmonics. Even though the SNR values are much lower than for our SMBHB systems, the Fisher matrix estimates represent quite well the marginal
-distributions of most parameters. We note, however, some notable deviation from Gaussianity for the system II: the sky position is almost bimodal, with an approximate symmetry across the ecliptic plane (we recall here that the ecliptic plane is not the plane of the LISA instrument that was used to report SMBHB results), owing probably to the localization being close to this plane; and the distance and inclination posteriors show a long tail extending way beyond the Fisher estimate. 
+and \ref{fig:sbhb_corner_12}.
+Similarly to the MBHB systems, we find close agreement between the \texttt{multinest} and \texttt{ptmcmc} samplers.
+The joint distributions for extrinsic parameters are fairly simple, with extended degeneracies occuring only in the angular parameters $(\varphi, \psi)$.
+Thanks to the complexity of the instrument transfer functions shown in Fig.~\ref{fig:transferSBHBcaseI} carrying a lot of information, the sky localization is very good.
+The typical degeneracy between inclination and distance
+is evident, as there is no degeneracy breaking from higher harmonics.
+Even though the SNR values are much lower than for our SMBHB systems, the Fisher matrix represents quite well the marginal distributions of most parameters.
+We note, however, some notable deviation from Gaussianity for system II: the sky position is almost bimodal, with an approximate symmetry across the ecliptic plane (we recall here that the ecliptic plane is not the plane of the LISA instrument that was used to report SMBHB results), owing probably to the localization being close to this plane; and the distance and inclination posteriors show a long tail extending way beyond the Fisher estimate. 
 
 \begin{figure*}
 	\includegraphics[width=0.9\textwidth]{../plots/corner_sobh_tdc1_extr_ptmcmc_bambi}
@@ -1256,25 +1269,33 @@ In this work, we have explored the Bayesian parameter estimation for full, inspi
 
 We improved the speed of likelihood computations by combining several ingredients: fast IMR Fourier-domain waveforms, a fast Fourier-domain treatment of the instrument response and accelerated overlap computations between amplitude/phase signals in the absence of noise. The resulting likelihood costs, of about 15ms for waveforms with higher harmonics and 1ms for waveforms including only the dominant harmonic, allowed us to perform easily Bayesian parameter estimation on high-SNR signals requiring up to $10^{8}$ likelihood evaluations with standard Bayesian samplers.
 
-Using these tools to simulate the parameter recovery of two examples of SMBHB signals, we produced multidimensional posterior distributions. While our posterior distributions for masses are not really representative in the absence of know degeneracies between the mass ratio and the spins, we encountered and investigated two different kinds of degeneracies in the extrinsic parameter space.
+Using these tools to simulate the parameter recovery of two examples of SMBHB signals, we produced multidimensional posterior distributions.
+Because our study did not consider spins and their well-known degeneracy with masses, our posterior distributions for masses cannot yet be taken as representative of the actual LISA capabilities.
+Nevertheless, we encountered and investigated two different kinds of degeneracies in the extrinsic parameter space.
 
-Considering first IMR signals, we found a \textit{two-fold} degeneracy for the sky position corresponding to the \textit{reflected} sky localization with respect to the plane of the LISA constellation (opposite sign of the LISA-frame latitude). We also found that, when limiting the signals to their dominant harmonic $h_{22}$, strong degeneracies in distance-inclination could occur with a posterior distribution in the sky appearing shifted from the injected value. We gave an analytic explanation of this degeneracy by eliminating the time and frequency dependencies in the response, reducing it to an explicitly degenerate form. However, including higher harmonics in the analysis strongly breaks those degeneracies, and leads to a much better determination of both distance-inclination and sky position. Although the reflected sky localization survives with higher harmonics, we also note that the posteriors appear as much more Gaussian in all extrinsic parameters; using a simplified signal with only the dominant harmonic significantly complicates the posterior sampling.
+Considering first IMR signals, we found a \textit{two-fold} degeneracy for the sky position corresponding to the \textit{reflected} sky localization with respect to the plane of the LISA constellation (opposite sign of the LISA-frame latitude). We also found that, when limiting the signals to their dominant harmonic $h_{22}$, strong degeneracies in distance-inclination can occur, causing the posterior distribution in the sky to appear shifted from the injected value. We gave an analytic explanation of this degeneracy by eliminating the time and frequency dependencies in the response, reducing it to an explicitly degenerate form. However, including higher harmonics in the analysis strongly breaks those degeneracies, and leads to a much better determination of both distance-inclination and sky position. Although the reflected sky localization survives with higher harmonics, we also note that the posteriors appear as much more Gaussian in all extrinsic parameters; using a simplified signal with only the dominant harmonic significantly complicates the posterior sampling.
 
-Secondly, considering pre-merger analyses to investigate how information accumulates with time, we found an \textit{eight-fold} degeneracy for the sky position, obtained by duplicating the original and the reflected sky positions with $\pi/2$, $\pi$, $-\pi/2$ shifts in the LISA-frame longitude. For our example systems, the posterior only collapses on the two-fold degeneracy, noticed previously for IMR signals, minutes before merger. By decomposing the LISA instrument response in different effects, separating its time-dependency from its frequency-dependency, we could pinpoint the role of both effects. The time-dependency of the response, consequence of the motion of LISA, leaves a moderate imprint at low frequencies, penalizing moderately other modes in the sky but leaving the \textit{antipodal} sky position degenerate. By contrast, the frequency-dependency of the response, not included in previous parameter studies, is responsible for the degeneracy breaking and the collapse from eight to two modes in the sky. Note that the relative importance of the time and frequency dependency of the response will change for heavier or lighter systems.
+Secondly, considering pre-merger analyses to investigate how information accumulates with time, we found an \textit{eight-fold} degeneracy for the sky position, obtained by rotating the original and reflected sky positions by integer multiples of $\pi/2$ around the axis of the LISA constellation. For our example systems, the posterior only collapses on the two-fold degeneracy, noticed previously for IMR signals, minutes before merger. By decomposing the LISA instrument response into different effects, separating its time-dependency from its frequency-dependency, we could pinpoint the role of both effects. The time-dependency of the response, consequence of the motion of LISA, leaves a moderate imprint at low frequencies, penalizing moderately other modes in the sky but leaving the \textit{antipodal} sky position degenerate. By contrast, the frequency-dependency of the response, not included in previous parameter studies, is responsible for the degeneracy breaking and the collapse from eight to two modes in the sky. Note that the relative importance of the time and frequency dependency of the response will change for heavier or lighter systems.
 
-We also explored the recovery of extrinsic parameters of SBHB signals (fixing the masses and spin parameters as well as the merger time), using the same methodology as for SMBHB signals to arrive at a likelihood cost of $\sim 2 \mathrm{ms}$. Investigating two example systems, we found that the distribution of extrinsic parameters is mostly Gaussian, with for one case some bimodality in the sky position found for one source lying close to the ecliptic plane, and an extended tail in the distance posterior.
+We also explored the recovery of extrinsic parameters of SBHB signals (fixing the masses and spin parameters as well as the merger time), using the same methodology as for SMBHB signals to arrive at a likelihood cost of $\sim 2 \mathrm{ms}$. Investigating two example systems, we found that the distribution of extrinsic parameters is mostly Gaussian, with a bimodality in the sky position found for one source lying close to the ecliptic plane, and an extended tail in the distance posterior.
 
-Comparing the parameter estimation results obtained with our two samplers, $\texttt{ptmcmc}$ and $\texttt{multinest}$, we found in general a good agreement. We noted however that \texttt{multinest} can fall short of exploring the full degeneracies in parameter space, in the degenerate case of a signal without higher harmonics; this limitation is further illustrated by the example of a fully degenerate response. We also found that using Fisher matrix estimates would not reproduce Bayesian results in general: degeneracies in the sky would not be covered by a Fisher computation that is intrinsically unimodal, and neither would the specific features of the $22$-mode degenerate posteriors. That degeneracies occur even with the high SNRs of our SMBHB signals is remarkable, and reminds us that the usual statement of the validity of the Fisher matrix approximation in the high-SNR limit is very dependent on the morphology of the signal. In many respects, the moderate-SNR posteriors for our SBHB systems are more Gaussian than our high-SNR SMBHB $22$-mode posteriors.
+Comparing the parameter estimation results obtained with our two samplers, $\texttt{ptmcmc}$ and $\texttt{multinest}$, we found an overall good agreement. We noted however that \texttt{multinest} can fall short of exploring the full degeneracies in parameter space, in the degenerate case of a signal without higher harmonics; this limitation is further illustrated by the example of a fully degenerate response. We also found that using Fisher matrix estimates does not reproduce Bayesian results in general: the complicated degeneracies in the sky cannot be covered by a Fisher computation that is intrinsically unimodal, and neither can the specific features of the $22$-mode degenerate posteriors. That degeneracies occur even with the high SNRs of our SMBHB signals is remarkable, and reminds us that the usual statement of the validity of the Fisher matrix approximation in the high-SNR limit is very dependent on the morphology of the signal. In many respects, the moderate-SNR posteriors for our SBHB systems are more Gaussian than our high-SNR SMBHB $22$-mode posteriors.
 
 Our exploratory work calls for a number of natural extensions that will help us to better understand the future capabilities of the LISA instrument.
 
-First, we only investigated a handful of sources. In particular, we chose our SMBHB systems to be representative of the bulk of the population; they are not ``golden sources'', i.e. they are not part of the tail of lower-redshift systems that would provide us with the most interesting science outputs with LISA, notably in terms of electromagnetic counterparts. It is likely that the parameter recovery here will be different, with a longer detectable signal and the motion of LISA playing a role in the premerger localization. We also limited ourselves to a single redshifted mass, while the morphology of the signals will change strongly between the two ends of the LISA spectrum, from intermediate mass black holes $M\sim 10^{3} M_{\odot}$ to massive systems $M>10^{7} M_{\odot}$.
+First, we only investigated a handful of sources. In particular, we chose our SMBHB systems to be representative of the bulk of the expected population; they are not ``golden sources'', i.e. they are not part of the tail of lower-redshift systems that will deliver the most interesting science outputs with LISA, notably in terms of electromagnetic counterparts. It is likely that the parameter recovery here will be different, with a longer detectable signal and the motion of LISA playing a role in the premerger localization. We also limited ourselves to a single redshifted mass, while the morphology of the signals will change strongly between the two ends of the LISA spectrum, from intermediate mass black holes ($M\sim 10^{3} M_{\odot}$) to massive systems ($M>10^{7} M_{\odot}$).
 
-In the future, it will be important to incorporate more physics in our waveform models. In this study our signals were limited to non-spinning, circularized systems. The aligned components of the spin will play a role by allowing degeneracies between masses and spin magnitudes, but we can expect that they will not affect qualitatively the posterior distributions for extrinsic parameters; this will be investigated in a forthcoming publication~\cite{Katz+20}. Precession and eccentricity, however, will change the harmonic structures of the signals and play an important role.
+Second, it will be necessary to incorporate more physics in our waveform models.
+In this study our signals were limited to non-spinning, quasicircular systems.
+The spin components along the orbital angular momentum will be degenerate with the masses, but we do not expect this to qualitatively change the posterior distributions for the extrinsic parameters.
+This will be investigated in a forthcoming publication~\cite{Katz+20}.
+Orbital precession and eccentricity, however, will change the harmonic structure of the signals and we expect they will play a much more important role.
 
-A limitation of our method is that, in order to accelerate the likelihood computation, set the noise realization to zero. Although we do not expect that the noise realization will cause drastic changes, with in particular the structure of degeneracies of signals in parameter space remaining relevant, fast likelihoods for noisy data would be a welcome addition to our methods. Analyzing signals with a noise injection will also become more important when considering more realistic instrumental noise models.
+Third, we used zero-noise realizations in order to accelerate the likelihood computation.
+Although we do not expect that the noise realization will cause qualitative changes, with in particular the structure of degeneracies of signals in parameter space remaining relevant, fast likelihoods for pre-sampled noisy data will eventually be necessary.
+Analyzing signals with a noise injection will also become more important when considering more realistic instrumental noise models.
 
-We also note that our sampling tools themselves (\texttt{multinest} and \texttt{ptmcmc}) were not tailored for the problem at hand; it is very possible that better sampling algorithm would require much less evaluations of the likelihood. The understanding we gained of the parameter space degeneracies will allow us to inform the sampler with e.g. tailored jump proposals, effectively telling MCMC chains where to look for degenerate signals in parameter space. For instance, the LIGO-Virgo parameter estimation tools~\cite{Veitch+14} make use of an analytical knowledge of degeneracies.
+We also note that our sampling tools themselves (\texttt{multinest} and \texttt{ptmcmc}) were not tailored for the problem at hand; it is very possible that better sampling algorithm would require much less evaluations of the likelihood. The understanding we gained of the parameter space degeneracies will allow us to inform the sampler with e.g. tailored jump proposals, effectively telling MCMC chains where to look for degenerate signals in parameter space. For instance, parameter estimation tools used in ground-based gravitational-wave astronomy make use of an analytical knowledge of degeneracies~\cite{Veitch+14}.
 
 Finally, we recall that many scientific questions about LISA rely on parameter estimation tools, and would benefit from proper Bayesian analyses with realistic signals: pre-merger localization of sources and advance warnings for electromagnetic instruments, cosmography using LISA sources as standard sirens, astrophysical inference from the source population, accuracy requirements on waveform models, trade-offs between instrumental design and scientific outputs. We hope that our tools will become useful for all these applications.
 
